--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-translate/angular-translate.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -37,6 +38,9 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers.js"></script>
     <script src="scripts/configuration.js"></script>
+    <script src="scripts/I18n/translations.js"></script>
+    <script src="scripts/settings/module.js"></script>
+    <script src="scripts/settings/controllers/settingsController.js"></script>
     <!-- endbuild -->
   </head>
 
