--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,8 @@
     <script src="scripts/I18n/translations.js"></script>
     <script src="scripts/settings/module.js"></script>
     <script src="scripts/settings/controllers/settingsController.js"></script>
+    <script src="scripts/players/module.js"></script>
+    <script src="scripts/whist/module.js"></script>
     <!-- endbuild -->
   </head>
 
