--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="bower_components/ionic/release/js/ionic.js"></script>
     <script src="bower_components/ionic/release/js/ionic-angular.js"></script>
     <script src="bower_components/ngCordova/dist/ng-cordova.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -43,10 +44,12 @@
     <script src="scripts/settings/controllers/settingsController.js"></script>
     <script src="scripts/players/module.js"></script>
     <script src="scripts/whist/module.js"></script>
+    <script src="scripts/whist/controllers/whistStandingController.js"></script>
+    <script src="scripts/whist/services/sharedPropertiesService.js"></script>
     <!-- endbuild -->
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="pointCalculator">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
