--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,10 @@
     <!-- ionic/angularjs js -->
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -45,7 +47,10 @@
     <script src="scripts/players/module.js"></script>
     <script src="scripts/whist/module.js"></script>
     <script src="scripts/whist/controllers/whistStandingController.js"></script>
+    <script src="scripts/whist/controllers/whistCalculatePointController.js"></script>
+    <script src="scripts/whist/directives/numericSpinner.js"></script>
     <script src="scripts/whist/services/sharedPropertiesService.js"></script>
+    <script src="scripts/whist/services/whistService.js"></script>
     <!-- endbuild -->
   </head>
 
