--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,8 @@
     <script src="scripts/settings/module.js"></script>
     <script src="scripts/settings/controllers/settingsController.js"></script>
     <script src="scripts/players/module.js"></script>
+    <script src="scripts/players/controllers/playersController.js"></script>
+    <script src="scripts/players/controllers/playerController.js"></script>
     <script src="scripts/whist/module.js"></script>
     <script src="scripts/whist/controllers/whistStandingController.js"></script>
     <script src="scripts/whist/controllers/whistCalculatePointController.js"></script>
