--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
     <script src="scripts/players/controllers/playersController.js"></script>
     <script src="scripts/players/controllers/playerController.js"></script>
     <script src="scripts/whist/module.js"></script>
+    <script src="scripts/whist/controllers/changePointsController.js"></script>
     <script src="scripts/whist/controllers/whistStandingController.js"></script>
     <script src="scripts/whist/controllers/whistCalculatePointController.js"></script>
     <script src="scripts/whist/directives/numericSpinner.js"></script>
