Adds a home screen to the app to start game

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
     <!-- your app's js -->
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/homeController.js"></script>
     <script src="scripts/controllers.js"></script>
     <script src="scripts/configuration.js"></script>
     <script src="scripts/I18n/translations.js"></script>
